feat: locales, configs, add feature, structure

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,11 @@ theme:
   name: material
 nav:
     - Home: index.md
+    - Setup enviroment: setup-enviroment.md
+    - Project structure: project-structure.md
     - Module structure: module-structure.md
+    - Configs: configs.md
+    - Adding a new feature: add-new-feature.md
+    - Adding a new language: add-new-language.md
     - Running the App: running-the-app.md
     - About: about.md
