fix: nav order and remove about

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,10 +4,10 @@ theme:
 nav:
     - Home: index.md
     - Setup enviroment: setup-enviroment.md
+    - Running the App: running-the-app.md
     - Project structure: project-structure.md
     - Module structure: module-structure.md
     - Customization: customization.md
     - Adding a new feature: add-new-feature.md
     - Adding a new language: add-new-language.md
-    - Running the App: running-the-app.md
-    - About: about.md
+    # - About: about.md
